@@ -19,6 +19,9 @@ Change log
       change. If set to false, only the chord pitches that are not included in the previous chord are triggered, the other ones
       are kept active. Defaults to true, because this was the behavior of version 0.3 and before.
 
+    - Fixed bug that treated different inversions of the same chord as different when the chord pattern was built. Now different
+      inversions of the same chord are treated as equal.
+
     - Corrected the legato fix from the previous release, which lead to the note being immediately cut off if the legato flag was
       used with the same pitch (e.g., "0~/4,0/4"). This situation is now treated as if the legato flag were off.
 
